<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top"
        android:padding="16dp">

        <!-- Logo Image -->
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
        android:layout_gravity="center"
        android:contentDescription="@string/app_logo"
        android:adjustViewBounds="true"
        android:maxHeight="380dp"
         />

        <!-- Title Text -->
        <TextView
            android:id="@+id/tvWelcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EssentialsHub is an application designed to simplify your packing process for any trip. Whether you're planning a weekend getaway, a sunny vacation, or an important work trip, EssentialsHub application ensures you never forget the essentials!"
            android:padding="16dp"
            android:textSize="20sp"
            android:textStyle="bold"

            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            />

        <!-- Buttons -->
        <Button
            android:id="@+id/btnWeekendTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"

            android:text="@string/weekend_trip"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btnSunnyWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"

            android:text="@string/sunny_week"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btnWorkTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"

            android:text="@string/work_trip" />

    </LinearLayout>
</ScrollView>